<resources>
    <string name="app_name">Postdude Client</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_request">New Request</string>
    <string name="url_example">https://example.com</string>
    <string name="query">Query</string>
    <string name="header">Header</string>
    <string name="auth">Auth</string>
    <string name="body">Body</string>
    <string name="send">SEND</string>
    <string-array name="method_list">
        <item>GET</item>
        <item>POST</item>
        <item>PUT</item>
        <item>DELETE</item>
    </string-array>
    <string name="success">200 OK</string>
    <string name="size">Size :</string>
    <string name="_10_8kb">10.8KB</string>
    <string name="time">Time :</string>
    <string name="_20_ms">20 ms</string>
    <string name="response">Response</string>
    <string name="headers">Headers</string>
    <string name="cookies">Cookies</string>
    <string name="status">Status :</string>
    <string name="draggable_line">Draggable Line</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get">GET</string>
    <string name="history">History</string>
    <string name="work_in_progress">Work In Progress</string>
    <string name="WIP">Feature not yet available</string>
    <string name="add_button">add query_params</string>
    <string name="value_of_query_params">value of query params</string>
    <string name="key_of_query_params">key of query params</string>
    <string name="value">Value</string>
    <string name="key">Key</string>
    <string name="remove_button">remove query params</string>
</resources>