<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/query_key"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:hint="@string/key"
        android:textColorHint="#757575" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/query_value"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:hint="@string/value"
        android:textColorHint="#757575" />

    <ImageButton
        android:id="@+id/query_add"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/add_button"
        android:src="@drawable/ic_baseline_add_24"
        />
    <ImageButton
        android:id="@+id/query_remove"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/remove_button"
        android:src="@drawable/ic_baseline_remove_24"
        />
</androidx.appcompat.widget.LinearLayoutCompat>