<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".ui.request.RequestFragment">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/req_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/req_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/url_example"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/req_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/req_method"
        app:layout_constraintTop_toTopOf="@+id/req_method" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/req_method"
        tools:layout_editor_absoluteX="12dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body" />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/req_send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
         />
</androidx.constraintlayout.widget.ConstraintLayout>