<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/res_bottom_sheet_constrain"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.response.ResponseDialogFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        style="?attr/bottomSheetStyle"
        android:padding="8dp"
        app:behavior_peekHeight="150dp"
        android:background="?attr/colorOnPrimary"
        >
        <ImageView
            android:id="@+id/req_img_break_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/draggable_line"
            android:src="@drawable/ic_baseline_linear_scale_24"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/res_status_label"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/req_img_break_point"
            />

        <TextView
            android:id="@+id/res_status_value"
            style="@style/Theme.PostdudeClient.TextResponseValue"
            android:layout_marginStart="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            app:layout_constraintBottom_toBottomOf="@+id/res_status_label"
            app:layout_constraintStart_toEndOf="@+id/res_status_label"
            app:layout_constraintTop_toTopOf="@+id/res_status_label" />

        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/res_size_label"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="@+id/res_status_label"
            app:layout_constraintStart_toEndOf="@+id/res_status_value"
            app:layout_constraintTop_toTopOf="@+id/res_status_label" />

        <TextView
            android:id="@+id/res_size_value"
            style="@style/Theme.PostdudeClient.TextResponseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_8kb"
            app:layout_constraintBottom_toBottomOf="@+id/res_size_label"
            app:layout_constraintStart_toEndOf="@+id/res_size_label"
            app:layout_constraintTop_toTopOf="@+id/res_size_label" />

        <TextView
            android:id="@+id/res_time_label"
            android:layout_marginStart="10dp"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            app:layout_constraintBottom_toBottomOf="@+id/res_status_label"
            app:layout_constraintStart_toEndOf="@+id/res_size_value"
            app:layout_constraintTop_toTopOf="@+id/res_status_label" />

        <TextView
            android:id="@+id/res_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20_ms"
            style="@style/Theme.PostdudeClient.TextResponseValue"
            app:layout_constraintBottom_toBottomOf="@+id/res_time_label"
            app:layout_constraintStart_toEndOf="@+id/res_time_label"
            app:layout_constraintTop_toTopOf="@+id/res_time_label" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/res_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/res_status_label"
            tools:layout_editor_absoluteX="12dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/response" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headers" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cookies" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/res_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/res_tab"
            android:layout_marginBottom="?attr/actionBarSize"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>