<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_request">

    <fragment
        android:id="@+id/nav_request"
        android:name="com.denztri.postdudeclient.ui.request.RequestFragment"
        android:label="@string/menu_request"
        tools:layout="@layout/fragment_request" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.denztri.postdudeclient.ui.history.HistoryFragment"
        android:label="Request History"
        tools:layout="@layout/fragment_history"
        />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.denztri.postdudeclient.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.denztri.postdudeclient.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>